tests/integration/errors/test_constrained_generic_not_interface.sn
# Error test: constraint names a struct, not an interface

struct Point =>
  x: int

struct Box < T: Point > =>
  item: T

fn main(): int =>
  return 0
